# shopify-demo

./: .env example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/application/: everstox_service.py  html_report.py  order_mapper.py  order_service.py
src/domain/: everstox_order.py  interfaces.py  order.py
src/entrypoints/: executor.py  main.py  settings.py
src/infrastructure/: order_repository.py  shopify_client.py
src/shared/: decorators.py
tests/: test_orders.py
